# rehab

./: .gitignore  .package.xml.swp  CMakeLists.txt  LICENSE  package.xml  readme.md  readme.md~  setup.py
config/: hand9dof_dependent_joints.yaml  hand9dof_dependent_joints_circular.yaml  hand9dof_dependent_joints_circular.yaml.html  hand9dof_dependent_joints_index.yaml  hand9dof_dependent_joints_index.yaml.html  hand9dof_dependent_joints_middle.yaml  hand9dof_dependent_joints_middle.yaml.html  hand9dof_dependent_joints_prismatic.yaml  hand9dof_dependent_joints_prismatic.yaml.html  hand9dof_dependent_joints_ring.yaml  hand9dof_dependent_joints_ring.yaml.html
kinematics/: .~lock.DH_table.xlsx#  DH_table.xlsx  Hand9DOF_dependent_joints.ods  frames.gv
kinematics/Hand9DOF/: Hand9DOF_dependent_joints.ods
kinematics/Hand9DOF/Index/: .RData  .Rhistory  actuators_plots.R  bellow_angles_elongations_fem_experiment.R  denavit_hartenberg_modified.html  denavit_hartenberg_modified.ipynb  denavit_hartenberg_soft_actuator.ipynb  dh_soft_robot_visualize.R  dh_visualize.R  dh_visualize_modular.R  fem_position_prepare.R  leaf_spring_flexture_soft_robot.ipynb  pseudo_rigid_body_model.ipynb
kinematics/ikfast/kinematics.a7b0c49bbc035b62f2601274233a5d02/: ikfast0x10000049.Transform6D.0_1_2_3_4_5.cpp  ikfast0x10000049.Transform6D.0_1_2_3_4_5.pp
launch/: concept_rviz.launch  forearm_concept_rviz.launch  hand9dof_rviz.launch  rviz.launch~  upper_extremity_rviz.launch  upper_extremity_rviz.launch~
models/RehabilitationDevice/3DPrint/: Prism3Base.stl  Prism3BaseVIS_Prism3Base.stl  Prism3MidSlider.stl  Prism3MidSliderVIS_Prism3MidSlider.stl  prismatic_print.fpp
models/RehabilitationDevice/standard/: K0442.45252510_0.dae
models/RehabilitationDeviceForearmHand/ForearmRehab/: model.config  model.sdf
models/RehabilitationDeviceForearmHand/ForearmRehabActive/: model.config  model.sdf
models/RehabilitationDeviceForearmHand/ForearmRehabIKFast/: model.config  model.sdf
models/RehabilitationDeviceForearmHand/ForearmRehabSimplified/: model.config  model.sdf  model.urdf
models/RehabilitationDeviceHand/Hand9DOF/: hand_set_normals.py  model-normals.sdf  model-normals.urdf  model.config  model.sdf
models/UpperExtremityModel/: .Stanford_VA_upper_limb_model.osim.swp  AppState.xml  Stanford_VA_upper_limb_model.osim  Stanford_VA_upper_limb_model_markers.xml  convert_to_ply.py
models/UpperExtremityModel/bones/: 1mc.asc  2distph.asc  2mc.asc  2midph.asc  2proxph.asc  3distph.asc  3mc.asc  3midph.asc  3proxph.asc  4distph.asc  4mc.asc  4midph.asc  4proxph.asc  5distph.asc  5mc.asc  5midph.asc  5proxph.asc  capitate.asc  clavicle.asc  hamate.asc  lunate.asc  pisiform.asc  scaphoid.asc  scapula.asc  thorax.asc  thumbdist.asc  thumbprox.asc  trapezium.asc  trapezoid.asc  triquetrum.asc
models/UpperExtremityModel/ply/: lunate.ply  pisiform.ply
rviz/: config.rviz  config_concept.rviz  config_hand.rviz  config_hand_white.rviz  config_upper_extremity.rviz
scripts/: hand_device_tf_publisher
scripts/kinematics/: kdl_parse.py  kdl_parse.py~
scripts/openrave_dockerfile/: Dockerfile  generate_ik.sh  robot_wrapper.xml
src/hand_device_tf/nodes/: index_tf_publisher.py
urdf/: elbow.urdf.xacro~  hand.urdf.xacro  hand.urdf.xacro~  rehab.urdf  rehab.urdf.xacro  rehab.urdf.xacro~  shoulder.urdf.xacro  shoulder.urdf.xacro~  wrist.urdf.xacro  wrist.urdf.xacro~
urdf/ForearmRehab/: ForearmRehabActive.urdf  ForearmRehabIKFast.urdf  forearm_rehab.urdf
urdf/Hand9DOF/: hand9dof.urdf
urdf/RehabConcept/: rehab_concept.urdf  rehab_concept.urdf~
urdf/RehabConcept/meshes/: VIS_Act1.dae  VIS_Act2.dae  VIS_Act3.dae  VIS_Act4.dae  VIS_Act5.dae  VIS_Act6.dae  VIS_Act7.dae  VIS_Act8.dae  VIS_BaseLink.dae  VIS_ElasticHingePart1.dae  VIS_ElasticHingePart2.dae  VIS_ElbowInterface.dae  VIS_ElbowLink1.dae  VIS_ElbowWristLink.dae  VIS_HandInterfaceBack.dae  VIS_HandInterfaceBase.dae  VIS_HandInterfaceRing.dae  (+27 more)
urdf/UpperExtremity/: upper_extremity.urdf  upper_extremity.urdf~
(+125 files in other folders)
